fix:(style): background not showing

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,4 @@
 body {
   background: var(--mantine-color-background-gradient);
+  height: 100vh;
 }
